--- a/adminuser/files/sb-admin2/edit_siswa.html
+++ b/adminuser/files/sb-admin2/edit_siswa.html
@@ -279,9 +279,9 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">SMKN 8</span>
                                 <img class="img-profile rounded-circle"
-                                    src="img/undraw_profile.svg">
+                                    src="img/smk8.png">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -334,12 +334,12 @@
 
                             <div class="form-group">
                                 <label for="name">Nama Siswa</label>
-                                <input type="text" class="form-control" name="name"  placeholder="Masukkan Nama Anda">
+                                <input type="text" class="form-control" name="name"  placeholder="Masukkan Nama Siswa">
                             </div>
                           
                             <div class="form-group">
                                 <label for="nisn">NISN</label>
-                                <input type="text" class="form-control" name="nisn"  placeholder="Masukkan NISN Anda">
+                                <input type="text" class="form-control" name="nisn"  placeholder="Masukkan NISN Siswa">
                             </div>
 
                             <div class="mb-3">
@@ -371,7 +371,7 @@
 
                         <br>
                     
-                    <button type="submit" class="btn btn-primary" >edit</button>
+                    <button type="submit" class="btn btn-primary" >Edit</button>
                     <left>
                          <a href="tables.html" class="btn btn-success btn-icon-split">
                             <span class="icon text-white-50">
