--- a/adminuser/files/sb-admin2/editbayar.html
+++ b/adminuser/files/sb-admin2/editbayar.html
@@ -272,14 +272,14 @@
 
                         <div class="topbar-divider d-none d-sm-block"></div>
 
-                        <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Bagas</span>
-                                <img class="img-profile rounded-circle"
-                                    src="img/user.png">
-                            </a>
+                       <!-- Nav Item - User Information -->
+                       <li class="nav-item dropdown no-arrow">
+                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">SMKN 8</span>
+                            <img class="img-profile rounded-circle"
+                                src="img/smk8.png">
+                        </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
