--- a/adminuser/files/sb-admin2/tables.html
+++ b/adminuser/files/sb-admin2/tables.html
@@ -84,6 +84,22 @@
                 <span>Data Pembayaran</span></a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="true" aria-controls="collapseTwo">
+                <i class="fas fa-fw fa-cog"></i>
+                <span>Setting Pembayaran</span>
+            </a>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <h6 class="collapse-header">Pembayaran kelas:</h6>
+                    <a class="collapse-item" href="kelas_X.html">X</a>
+                    <a class="collapse-item" href="kelas_XI.html">XI</a>
+                    <a class="collapse-item" href="kelas_XII.html">XII</a>
+                </div>
+            </div>
+        </li>
+
          <!-- Nav Item - History -->
          <li class="nav-item">
             <a class="nav-link" href="historypembayaran.html">
