--- a/adminuser/files/sb-admin1/register.html
+++ b/adminuser/files/sb-admin1/register.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-
+    <link rel="icon" type="image/png" sizes="32x32" href="img/bayarSPP-5.png">
     <title>bayarSPP | USER</title>
 
     <!-- Custom fonts for this template-->
