--- a/adminuser/files/sb-admin2/login.html
+++ b/adminuser/files/sb-admin2/login.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/bayarSPP-5.png">
 
     <title>bayarSPP | ADMIN</title>
 
