--- a/adminuser/files/sb-admin2/index.html
+++ b/adminuser/files/sb-admin2/index.html
@@ -81,7 +81,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link collapsed" href="setting_pembayaran.html" data-toggle="collapse" data-target="#collapseTwo"
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>Setting Pembayaran</span>
@@ -89,6 +89,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Pembayaran kelas:</h6>
+                        <a class="collapse-item" href="setting_pembayaran.html">setting</a>
                         <a class="collapse-item" href="kelas_X.html">X</a>
                         <a class="collapse-item" href="kelas_XI.html">XI</a>
                         <a class="collapse-item" href="kelas_XII.html">XII</a>
