--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -54,14 +54,10 @@
 
                             </li>
                             <li class="scrollToLink">
-                                <a href="#screenshots">Bukti</a>
-
-                            </li>
-                            <li class="scrollToLink">
                                 <a href="#pricing">Pembayaran</a>
                             </li>
                             <li class="scrollToLink mx-5">
-                                <a href="#news">About</a>
+                                <a href="#about">About</a>
                                 <ul class="sub-menu">
                                 </ul><!-- /.sub-menu -->
                             </li>
@@ -245,68 +241,12 @@
                 </div><!-- /.inner-container -->
             </div><!-- /.container -->
         </section><!-- /.fact-one -->
-        <section class="app-shot-one" id="screenshots">
-            <div class="container-fluid">
-                <div class="block-title text-center">
-                    <p class="block-title__tag-line">Checkout App Interface </p><!-- /.block-title__tag-line -->
-                    <h2 class="block-title__title">Testimoni</h2><!-- /.block-title__title -->
-                </div><!-- /.block-title -->
-                <div class="app-shot-one__carousel owl-theme owl-carousel">
-                    <div class="item">
-                        <img src="assets/images/app-shot-1.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-2.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-3.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-4.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-5.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-1.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-2.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-3.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-4.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-5.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-1.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-2.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-3.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-4.jpg" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/app-shot-1-5.jpg" alt="">
-                    </div><!-- /.item -->
-                </div><!-- /.app-shot-one__carousel owl-theme owl-carousel -->
-            </div><!-- /.container-fluid -->
-        </section><!-- /.app-shot-one -->
-    
         <section class="pricing-one" id="pricing">
             <div class="container">
                 <div class="block-title text-center">
                     <p class="block-title__tag-line">Info Pembayaran
                     </p><!-- /.block-title__tag-line -->
-                    <h2 class="block-title__title">Pilih Opsi Pembayaran</h2><!-- /.block-title__title -->
+                   <h2 class="block-title__title">Pengelola Dapat Mengatur Opsi Pembayaran</h2><!-- /.block-title__title -->
                 </div><!-- /.block-title -->
                 <div class="row">
                     <div class="col-lg-4">
@@ -354,7 +294,7 @@
                    bayarSPP </h3><!-- /.block-title__title -->
                 <p class="cta-one__text">Sistem Pembayaran Yang Mudah Cepat Dan Aman</p>
                 <!-- /.cta-one__text -->
-                <a href="#" class="thm-btn cta-one__btn">Join Sekarang</a><!-- /.thm-btn -->
+                <a href="registrasi.html" class="thm-btn cta-one__btn">Join Sekarang</a><!-- /.thm-btn -->
             </div><!-- /.container -->
         </section><!-- /.cta-one -->
         <footer class="site-footer">
@@ -362,40 +302,33 @@
             <div class="site-footer__line"></div><!-- /.site-footer__line -->
             <div class="site-footer__bubble-2"></div><!-- /.site-footer__bubble-2 -->
             <div class="site-footer__upper">
-                <div class="container">
+                <div class="container" id="about">
                     <div class="row">
                         <div class="col-lg-2">
                             <div class="footer-widget footer-widget__about">
-                                <img src="assets/images/bayarSPP-6.png" width="220" alt="" class="footer-widget__logo">
-                                <p class="footer-widget__contact"><a href="tel:888-666-0000">888 666 0000</a></p>
+                                <img src="assets/images/bayarSPP-6.png" width="250" alt="" class="footer-widget__logo">
+                                <p class="footer-widget__contact">Membayar dengan mudah cepat dan aman</p>
                                 <!-- /.footer-widget__contact -->
-                                <p class="footer-widget__contact"><a
-                                        href="mailto:needhelp@example.com">freedomcode@example.com</a>
-                                </p><!-- /.footer-widget__contact -->
+                                <!-- /.footer-widget__contact -->
                             </div><!-- /.footer-widget -->
                         </div><!-- /.col-lg-2 -->
                         <div class="col-lg-6 d-flex justify-content-between footer-widget__links-wrap">
                             <div class="footer-widget">
-                                <h3 class="footer-widget__title">Explore</h3><!-- /.footer-widget__title -->
-                                <ul class="footer-widget__links list-unstyled">
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Features</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">How It Works</a></li>
+                                <h3 class="footer-widget__title"></h3>
+                                <!-- /.footer-widget__title -->
                                 </ul><!-- /.footer-widget__links -->
                             </div><!-- /.footer-widget -->
                             <div class="footer-widget">
-                                <h3 class="footer-widget__title">Services</h3><!-- /.footer-widget__title -->
+                                <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__links list-unstyled">
-                                    <li><a href="#">Speed Optimization </a></li>
-                                    <li><a href="#">Marketing Analysis </a></li>
-                                    <li><a href="#">SEO and Backlinks </a></li>
-                                    <li><a href="#">Content Marketing</a></li>
+                                    <li><a href="#">Beranda </a></li>
+                                    <li><a href="#">Kontak </a></li>
+                                    <li><a href="#">Fitur </a></li>
+                                    <li><a href="#">Daftar</a></li>
                                 </ul><!-- /.footer-widget__links -->
                             </div><!-- /.footer-widget -->
                             <div class="footer-widget">
-                                <h3 class="footer-widget__title">Links</h3><!-- /.footer-widget__title -->
+                                <h3 class="footer-widget__title">Tentang</h3><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__links list-unstyled">
                                     <li><a href="#">Help </a></li>
                                     <li><a href="#">Support </a></li>
