--- a/adminuser/files/sb-admin1/profile_sekolah.html
+++ b/adminuser/files/sb-admin1/profile_sekolah.html
@@ -211,7 +211,7 @@
 											<tr>
 												<td>Email</td>
 												<td>:</td>
-												<td>freedomcode.sch.id</td>
+												<td>asta@smkn8malang.sch.id</td>
 											</tr>
                                             <tr>
 												<td>NPSN</td>
