--- a/adminuser/files/sb-admin2/dataspp.html
+++ b/adminuser/files/sb-admin2/dataspp.html
@@ -281,7 +281,7 @@
                                             <div class="col">
                                                 <div class="progress progress-sm mr-2">
                                                     <div class="progress-bar bg-info" role="progressbar"
-                                                        style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                        style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                                                         aria-valuemax="100"></div>
                                                 </div>
                                             </div>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
 
-                    
+                </div>    
                    
 
                 <!-- Begin Page Content -->
