--- a/adminuser/files/sb-admin1/index.html
+++ b/adminuser/files/sb-admin1/index.html
@@ -245,7 +245,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Pembayaran Per-Bulan</div>
+                                                Pembayaran (Per-Bulan)</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Rp. 100.000,00</div>
                                         </div>
                                         <div class="col-auto">
@@ -281,7 +281,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pembayaran Per-Tahun</div>
+                                                Pembayaran (Per-Tahun)</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Rp. 1.200.000,00</div>
                                         </div>
                                         <div class="col-auto">
