--- a/adminuser/files/sb-admin2/dataspp.html
+++ b/adminuser/files/sb-admin2/dataspp.html
@@ -215,7 +215,7 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                           Total Pembayaran Bulan ini</div>
+                                           Total Pembayaran (Bulan ini)</div>
                                         <div class="h5 mb-0 font-weight-bold text-gray-800">Rp. 3.800.000</div>
                                     </div>
                                     <div class="col-auto">
@@ -255,7 +255,7 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                            Total Pembayaran SPP Per tahun</div>
+                                            Total Pembayaran SPP (Tahun Ini)</div>
                                         <div class="h5 mb-0 font-weight-bold text-gray-800">Rp. 13.200.000</div>
                                     </div>
                                     <div class="col-auto">
